--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
 <div class="container">
-    <app-product-create></app-product-create>
+    <app-product-update></app-product-update>
 </div>
