--- a/src/app/product/product-update/product-update.component.html
+++ b/src/app/product/product-update/product-update.component.html
@@ -1,4 +1,4 @@
-<section id="rentalDetails" >
+<section id="productDetails" >
   <div class="upper_section">
     <div class="row">
       <div class="col-md-6">
