--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,125 @@
-/* You can add global styles to this file, and also import other style files */
-$main-color: #61dafb;
-$main-text-color: #484848;
-$light-gray-color: #a9a9a9;
-$main-black-color: #20232a;
-$main-white-color: #ededed;
+@import 'variables';
+@import 'rental-detail';
+
+html, body, p {
+	color: $main-text-color;
+}
+
+.apartment{
+	color: #a72da3;
+}
+
+.condo{
+	color: #d68000;
+}
+
+.house{
+	color: #bf1818;
+}
+
+.page-title{
+	font-size: 30px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
+.clickable{
+	cursor: pointer;
+}
+
+.btn-ghost{
+	background-color: transparent;
+	color: $main-color;
+	border: 1px solid $main-color !important;
+	font-size: 12px !important;
+
+	&:hover, &:focus{
+		background-color: transparent !important;
+		color: $main-color !important;
+		border: 1px solid $main-color !important;
+	}
+}
+
+.btn-bwm{
+	background-color: $main-color;
+	border-color: $main-color;
+	color: white;
+	padding: 15px 30px;
+	font-size: 20px !important;
+
+	&:hover, &:focus, &:active{
+		border-color: $main-color !important;
+		background-color:$main-color !important;
+	}
+}
+
+.bwm-form{
+	color: $main-text-color;
+
+	form{
+		margin-bottom: 10px;
+	}
+
+	.alert{
+		p{
+			margin: 0;
+		}
+	}
+
+	h1{
+		font-weight: 700;
+		margin-bottom: 30px;
+	}
+
+	.image-container{
+		position: relative;
+		
+		img{
+			width: 100%;
+			border-radius: 5px;
+		}
+
+	}
+
+	label{
+		font-size: 12px;
+	}
+
+	.form-context{
+		font-size: 13px;
+	}
+
+	.catcgphrase{
+		text-align: center;
+		font-size: 42px;
+		position: absolute;
+		color: #f1f1f1;
+		padding: 40px;
+		background-color: rgba(0,0,0,0.5);
+		margin-top: 50px;
+		letter-spacing: 1px;
+	}
+
+}
+
+.inline{
+	display: inline-block;
+}
+
+.editable-component{
+	.btn{
+		&.btn-editable{
+			margin-left: 5px;
+			color: white;
+			font-size: 12px;
+		}
+	}
+}
+
+
+
+
+//New styles
 
 .navbar {
     padding: 20px;
@@ -19,7 +135,7 @@ $main-white-color: #ededed;
       margin-right: 30px;
       font-size: 27px;
       letter-spacing: 1px;
-      color: $main-color !important;
+      color: $main-color-1 !important;
       font-weight: 500;
   
       img {
@@ -33,7 +149,7 @@ $main-white-color: #ededed;
     }
   
     .btn-bwm-search {
-      border-color: $main-color;
+      border-color: $main-color-1;
       color: $main-color;
   
       &:hover, &:focus, &:active {
@@ -53,14 +169,14 @@ $main-white-color: #ededed;
         font-size: 14px;
   
         &:active {
-          background-color: $main-color;
+          background-color: $main-color-1;
         }
       }
     }
   }
 
   .bwm-form{
-	color: $main-text-color;
+	color: $main-text-color-1;
 
 	form{
 		margin-bottom: 10px;
