--- a/src/app/common/components/image-upload/image-upload.component.html
+++ b/src/app/common/components/image-upload/image-upload.component.html
@@ -1,20 +1,20 @@
-<label *ngIf="!imageChangedEvent" class="image-upload-container btn btn-bwm">
+<label  class="image-upload-container btn btn-bwm">
   <span>Select Image</span>
     <input  
-            type="file" accept='image/*'
-            (change)='processFile($event)'/>
+            type="file" accept='image/*'           
+            ng2FileSelect [uploader]="uploader" (onFileSelected)="OnFileSelected($event)"/>
 
 </label>
 
-<button *ngIf="imageChangedEvent" 
-        (click)='uploadImage()' 
+<button 
+        (click)='Upload()' 
         class="btn btn-success" 
         type="button">Upload Image</button>
 
-<button *ngIf="imageChangedEvent" 
+<!--<button *ngIf="imageChangedEvent" 
         (click)='cancelCropping()' 
         class="btn btn-danger" 
-        type="button">Cancel</button>
+        type="button">Cancel</button>  
 
 <image-cropper *ngIf="imageChangedEvent"
     [imageChangedEvent]="imageChangedEvent"
@@ -24,18 +24,9 @@
     format="jpeg"
     (imageCroppedFile)="imageCropped($event)"
     (imageLoaded)="imageLoaded()"
-></image-cropper>
+></image-cropper> -->
 
-<div *ngIf="selectedFile && selectedFile.src" class="img-preview-container">
-    <div class="img-preview"
-          [ngStyle]="{'background-image': 'url(' + selectedFile.src + ')'}">
-    </div>
 
-    <div *ngIf="selectedFile.pending" class="img-loading-overlay">
-        <div class="img-spinning-circle"></div>
-    </div>
 
-    <div *ngIf="selectedFile.status === 'OK'"class="alert alert-success"> Image Upload Succssfully!</div>
-    <div *ngIf="selectedFile.status === 'FAIL'" class="alert alert-danger"> Image Upload Failed</div>
 
-</div>
+
