Fix bug about Image Update

--- a/src/app/common/components/image-upload/image-upload.component.html
+++ b/src/app/common/components/image-upload/image-upload.component.html
@@ -1,17 +1,17 @@
-<label  class="image-upload-container btn btn-bwm">
+<label *ngIf="!imageChangedEvent" class="image-upload-container btn btn-bwm">
   <span>Select Image</span>
-    <input  
+    <input 
             type="file" accept='image/*'           
-            ng2FileSelect [uploader]="uploader" (onFileSelected)="OnFileSelected($event)"/>
+            (change)='processFile($event)'/> 
 
 </label>
 
-<button 
-        (click)='Upload()' 
+<button *ngIf="imageChangedEvent"
+        (click)='uploadImage()' 
         class="btn btn-success" 
         type="button">Upload Image</button>
 
-<!--<button *ngIf="imageChangedEvent" 
+<button *ngIf="imageChangedEvent" 
         (click)='cancelCropping()' 
         class="btn btn-danger" 
         type="button">Cancel</button>  
@@ -24,9 +24,19 @@
     format="jpeg"
     (imageCroppedFile)="imageCropped($event)"
     (imageLoaded)="imageLoaded()"
-></image-cropper> -->
+></image-cropper> 
 
-
-
+<div *ngIf="selectedFile && selectedFile.src" class='img-preview-container'>
+        <div class='img-preview'
+             [ngStyle]="{'background-image': 'url(' + selectedFile.src + ')'}">
+        </div>
+      
+        <div *ngIf="selectedFile.pending" class='img-loading-overlay'>
+          <div class='img-spinning-circle'></div>
+        </div>
+      
+        <div *ngIf="selectedFile.status === 'OK'" class='alert alert-success'> Image Uploaded Sucesfuly! </div>
+        <div *ngIf="selectedFile.status === 'FAIL'" class='alert alert-danger'> Image Upload Failed </div>
+</div>
 
 
