--- a/src/app/product/product-update/product-update.component.html
+++ b/src/app/product/product-update/product-update.component.html
@@ -5,7 +5,7 @@
           <bwm-editable-image
               [(entity)]="product"
               [field]="'image'"
-              (entityUpdated)="updateRental(product._id, $event)">
+              (entityUpdated)="updateProduct(product._id, $event)">
 
             </bwm-editable-image>
         </div>
