--- a/src/app/product/product-update/product-update.component.html
+++ b/src/app/product/product-update/product-update.component.html
@@ -5,16 +5,11 @@
           <bwm-editable-image
               [(entity)]="product"
               [field]="'image'"
-              (entityUpdated)="updateRental(product._id, $event)">
+              (entityUpdated)="updateProduct(product._id, $event)">
 
             </bwm-editable-image>
         </div>
-  
-        <div class="col-md-6">
-          <bwm-map 
-              [locationSubject]="locationSubject"
-              [location]="product.name+', '+product.street"></bwm-map>
-        </div>
+
       </div>
     </div>
   
@@ -65,30 +60,20 @@
               (entityUpdated)="updateProduct(product._id, $event)">
 
             </bwm-editable-input>
-
-            <bwm-editable-input
-              [(entity)]="product"
-              [field]="'street'"
-              [transformView]="transformLocation"
-              [className]="'product-street'"
-              (entityUpdated)="updateProduct(product._id, $event)">
-
-            </bwm-editable-input>
   
             <div class="rental-room-info">
               <span><i class="fa fa-building"></i>
                   <bwm-editable-input
                     [(entity)]="product"
-                    [field]="'bedrooms'"
+                    [field]="'quantity'"
                     [type]="'number'"
                     [style]="{'display': 'inline-block'}"
-                    [className]="'product-bedrooms'"
+                    [className]="'product-quantity'"
                     (entityUpdated)="updateProduct(product._id, $event)">
 
-                  </bwm-editable-input> bedrooms
+                  </bwm-editable-input> items
               </span>
-              <span><i class="fa fa-user"></i>{{countBedroomAssets(4)}} guests</span>
-              <span><i class="fa fa-bed"></i>{{countBedroomAssets(2)}} beds</span>
+              
             </div>
 
             <bwm-editable-textarea
